--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,6 @@
 	<name>vmlens-examples</name>
 	<url>http://maven.apache.org</url>
 
-
-
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -70,51 +67,38 @@
 				</configuration>
 			</plugin>
 
-
-
-
 			<plugin>
 				<groupId>com.vmlens</groupId>
 				<artifactId>interleave</artifactId>
 				<version>${project.version}</version>
-
-				<!-- start regression test -->
-
-				<configuration>
-
+     			<configuration>
 					<trimStackTrace>false</trimStackTrace>
-
-
-
 				</configuration>
-
 				<executions>
 					<execution>
 						<goals>
 							<goal>test</goal>
 						</goals>
 					</execution>
-
-
-
-
-
-
 				</executions>
-
-
 			</plugin>
+				
+	<plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-javadoc-plugin</artifactId>
+       <version>3.2.0</version>
+     
+                    <configuration>
+  
+        </configuration>
+      
+    </plugin> 
+			
+			
+			
+			
 
 		</plugins>
 	</build>
-
-
-
-
-
-
-
-
-
 
 </project>
