--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ _dist/*
 agent_lib/*
 
 .idea/*
+
+# gradle
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
