--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,32 @@
   <packaging>jar</packaging>
 
   <name>vmlens-example</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/vmlens/vlmens</url>
+
+  <organization>
+    <name>vmlens</name>
+    <url>https://www.vmlens.com</url>
+  </organization>
+
+  <repositories>
+    <repository>
+      <name>Central Portal Snapshots</name>
+      <id>central-portal-snapshots</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <vmlens.version>1.2.13</vmlens.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <vmlens.version>1.2.22</vmlens.version>
   </properties>
 
   <dependencies>
@@ -38,6 +59,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.12.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.youtrackdb</groupId>
+      <artifactId>youtrackdb-core</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
